feat: sonar fixes