@@ -2,7 +2,6 @@ package io.github.mroncatto.itflow.domain.email.entity.vo;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public enum ResetPasswordVariable {
     PASSWORD;
@@ -11,6 +10,6 @@ public enum ResetPasswordVariable {
     public static List<String> getValues(){
         return Arrays.stream(values())
                 .map(ResetPasswordVariable::toString)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
